--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <script src="./js/module1.js"></script>
     <script src="./js/module2.js"></script>
   </body>
 </html>
