--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <script src="./js/module1.js"></script>
     <script src="./js/module2.js"></script>
     <script src="./js/module3.js"></script>
+    <script src="./js/module4.js"></script>
   </body>
 </html>
