--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>JS Exercises</title>
   </head>
   <body>
     <script src="./js/module1.js"></script>
     <script src="./js/module2.js"></script>
     <script src="./js/module3.js"></script>
     <script src="./js/module4.js"></script>
+    <script src="./js/module5.js"></script>
   </body>
 </html>
